# Deepnest

./: .gitignore  ANALISI_COMPLETA.md  ANALYSIS_AND_IMPLEMENTATION_PLAN.md  COMPILATION_FIXES.md  CONVERSION_STATUS.md  CRASH_DIAGRAM.txt  CRITICAL_FIXES_IMPLEMENTED.md  DEBUG_CRASH_ANALYSIS.md  DeepNest.pro  EXECUTIVE_SUMMARY.md  FASE1_IMPLEMENTATION.md  FASE2_IMPLEMENTATION.md  FIXES_REQUIRED.md  FIX_IMPLEMENTATI.md  GEOMETRY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INTEGER_CONVERSION_PLAN.md  INTEGER_CONVERSION_PROGRESS.md  INVESTIGATION_COMPLETE.txt  INVESTIGATION_SUMMARY.txt  MINKOWSKI_NFP_ANALYSIS.md  NFP_TEST_RESULTS.md  ORBITAL_TRACING_ANALYSIS.md  ORBITAL_TRACING_COMPLETE_REWRITE_PLAN.md  ORBITAL_TRACING_FIX.md  PHASE1_COMPLETED.md  PHASE1_INNER_NFP_FIX.md  PIANO_SVILUPPO_FIX.md  POLYGON_EXTRACTOR_ALL_PAIRS.md  PROBLEMATIC_POLYGONS.md  README_SEGFAULT_FIX.md  REPORT_ANALISI_COMPLETA.md  SEGFAULT_ANALYSIS.md  SESSION_SUMMARY.md  TESTAPPLICATION_FIXES_IMPLEMENTED.md  TEST_APPLICATION_CRASH_ANALYSIS.md  TEST_PLAN.md  TEST_PLAN_DETAILED.md  THREAD_SAFETY_CRITICAL_ANALYSIS.md  THREAD_SAFETY_FIX.md  (+3 more)
deepnest-cpp/: CMakeLists.txt  FIX_SUMMARY.md  ORBITAL_TRACING_BUG_ANALYSIS.md  README.md  THREAD_SAFETY_FIX.md  deepnest-all.pro  deepnest-all.sln  deepnest.pro  deepnest.vcxproj  deepnest.vcxproj.filters  nfp_test_robust.txt  trace_test  trace_test.cpp
deepnest-cpp/docs/: NFP_FALLBACK_DEVELOPMENT.md
deepnest-cpp/include/deepnest/: DebugConfig.h  DeepNestSolver.h
deepnest-cpp/include/deepnest/algorithm/: GeneticAlgorithm.h  Individual.h  Population.h
deepnest-cpp/include/deepnest/config/: DeepNestConfig.h
deepnest-cpp/include/deepnest/converters/: QtBoostConverter.h
deepnest-cpp/include/deepnest/core/: BoundingBox.h  Point.h  Polygon.h  Types.h
deepnest-cpp/include/deepnest/engine/: NestingEngine.h
deepnest-cpp/include/deepnest/geometry/: ConvexHull.h  GeometryUtil.h  GeometryUtilAdvanced.h  IntegerNFP.h  OrbitalTypes.h  PolygonHierarchy.h  PolygonOperations.h  RobustNFP.h  Transformation.h
deepnest-cpp/include/deepnest/nfp/: Libnest2D_NFP.h  MinkowskiSum.h  NFPCache.h  NFPCalculator.h  calculatenfp.h
deepnest-cpp/include/deepnest/parallel/: ParallelProcessor.h
deepnest-cpp/include/deepnest/placement/: MergeDetection.h  PlacementStrategy.h  PlacementWorker.h
deepnest-cpp/include/deepnest/threading/: Clipper2ThreadGuard.h
deepnest-cpp/src/: DeepNestSolver.cpp
deepnest-cpp/src/algorithm/: GeneticAlgorithm.cpp  Individual.cpp  Population.cpp
deepnest-cpp/src/config/: DeepNestConfig.cpp
deepnest-cpp/src/converters/: QtBoostConverter.cpp
deepnest-cpp/src/core/: Point.cpp  Polygon.cpp  Types.cpp
deepnest-cpp/src/engine/: NestingEngine.cpp
deepnest-cpp/src/geometry/: ConvexHull.cpp  GeometryUtil.cpp  GeometryUtilAdvanced.cpp  IntegerNFP.cpp  OrbitalHelpers.cpp  PolygonHierarchy.cpp  PolygonOperations.cpp  Transformation.cpp
deepnest-cpp/src/nfp/: Libnest2D_NFP.cpp  MinkowskiSum.cpp  NFPCache.cpp  NFPCalculator.cpp  calculatenfp.cpp
deepnest-cpp/src/parallel/: ParallelProcessor.cpp
deepnest-cpp/src/placement/: MergeDetection.cpp  PlacementStrategy.cpp  PlacementWorker.cpp
deepnest-cpp/src/threading/: Clipper2ThreadGuard.cpp
deepnest-cpp/tests/: CMakeLists.txt  CMakeLists_verification.txt  ConfigDialog.cpp  ConfigDialog.h  ContainerDialog.cpp  ContainerDialog.h  DeepnestLibTests.cpp  DeepnestLibTests.pro  DiagnosticTool.cpp  DiagnosticTool.pro  FitnessTests.cpp  FitnessTests.pro  GeneticAlgorithmTests.cpp  GeneticAlgorithmTests.pro  GeometryValidationTests.cpp  JSComparisonTests.cpp  JSComparisonTests.pro  MinkowskiSumComparisonTest.cpp  MinkowskiSumComparisonTest.pro  NFPDebug.cpp  NFPValidationTests.cpp  OverlapDetectionTest.cpp  OverlapDetectionTest.pro  OverlapDetectionTest_README.md  PolygonExtractor.cpp  PolygonExtractor.pro  PolygonExtractor.vcxproj  PolygonExtractor.vcxproj.filters  PolygonHierarchyTest.cpp  RandomShapeGenerator.cpp  RandomShapeGenerator.h  SVGLoader.cpp  SVGLoader.h  SearchStartPointDebug.cpp  StepVerificationTests.cpp  StepVerificationTests.pro  StepVerificationTests.vcxproj  StepVerificationTests.vcxproj.filters  TESTING.md  TestApplication.cpp  (+6 more)
deepnest-cpp/tests/svgbrowser/: MainWindow.cpp  MainWindow.h  ZoomableGraphicsView.cpp  ZoomableGraphicsView.h  main.cpp  svgbrowser.vcxproj  svgbrowser.vcxproj.filters
deepnest-cpp/tests/testdata/: README.md  polygon_A.json  polygon_B.json
deepnestlib/: deepnestlib.pro
include/deepnest/: ClipperBridge.h  DeepNestConfig.h  DeepNestSolver.h  GeneticAlgorithm.h  GeometryTypes.h  GeometryUtils.h  MinkowskiConvolution.h  NestEngine.h  NestPartRepository.h  NestPolygon.h  NfpCache.h  NfpGenerator.h  PlacementCostEvaluator.h  PlacementWorker.h  QtGeometryConverters.h  ThreadPool.h
libnest2d/tools/libnfporb/: libnfporb.hpp
src/: DeepNestSolver.cpp
src/config/: DeepNestConfig.cpp
src/core/: GeneticAlgorithm.cpp  NestEngine.cpp  PlacementCostEvaluator.cpp  PlacementWorker.cpp
src/geometry/: ClipperBridge.cpp  GeometryUtils.cpp  MinkowskiConvolution.cpp  NestPartRepository.cpp  NestPolygon.cpp  NfpCache.cpp  NfpGenerator.cpp  QtGeometryConverters.cpp
src/utils/: ThreadPool.cpp
test_app/: main.cpp  test_app.pro
